<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EZoneQuiz</string>
    <string name="error">N/A</string>
    <string name="button_next">Next</string>
    <string name="title">Prepare For Life</string>
    <string name="empty"> </string>
    <string name="summary">Summary</string>
    <string name="future_content">Please excuse our dust; this content will come soon.</string>
    <string name="section1">Introduction</string>
    <string name="section1_s1">Being Truly Prepared for Emergencies</string>
    <string name="section1_s1_text">Every time there’s a major disaster, fear kicks in and sales on emergency products go up significantly. Fear is a biological mechanism that tells your body to increase adrenaline production, which turns on your “fight or flight” instinct. When you see a car racing towards you, adrenaline can help you jump out of the way in time. In this sense, fear is essential to survival.
    \n\n
    Fear as a lifestyle, however, can be more harmful than good. “Fight or flight” is a reaction that we can’t control, and it impedes us from becoming truly prepared for emergencies. How does it impede us? Here’s an example:
    \n\n
    John is moving to the Gulf Coast, and he’s nervous about hurricanes. He buys a hurricane emergency kit and immediately feels safer. He stores it in his closet without looking at it much. A few months later a hurricane actually hits. His house is flooded and among other damages he loses his plumbing. John might respond with something like this: “I know I have a hurricane emergency kit somewhere, but I didn’t realize how hard going without a toilet for a week is. I didn’t sign up for this! Get me out of here!”
    \n\n
    What happened to John? His fight or flight instinct was to buy a kit, and having satisfied his instinct he became content. He wasn’t ready for the reality of disasters and he wasn’t willing to adapt to his circumstances. If John had been living a prepared lifestyle, he might have been more willing to adapt: “Well, the toilet isn’t working and I can’t keep using it. I better find the portable toilet in the hurricane kit or find a way to dig a hole.” Charles Darwin explained the importance of adapting: “It is not the strongest of the species that survive, nor the most intelligent, but the one most responsive to change.”
    \n\n
    It is necessary to make emergency preparedness a lifestyle, not just a purchase. Call it faith, hard work, optimism, mental toughness, or whatever else you’d like, but preparing in this way equips us with the ability to adapt in the event of an actual emergency. Using this booklet will help you create an emergency preparedness lifestyle by learning (1) how to prepare without fear and knowing (2) what to prepare for.</string>
    <string name="section1_s1_quote_text">\"The only thing we have to fear is fear itself.\"</string>
    <string name="section1_s1_quote_source">- Franklin D. Roosevelt</string>
    <string name="section2">How to Prepare Without Fear</string>
    <string name="section2_summary_text">In this section we will cover the Four Pillars of Emergency Preparedness to equip you with a healthy lifestyle and the ability to adapt during emergencies.
    \n\n
    When you live a prepared lifestyle, you are truly prepared to adapt to disasters and emergencies. Now you may ask, “What is a prepared lifestyle? How do I begin living one?” To help you on your path, Emergency Zone has developed the 4 pillars of how to live a prepared lifestyle. Like a building held up by columns, being truly prepared depends on all four categories:• Become Fit\n• Learn Skills\n• Make and Practice Emergency Plans\n• Have Proper Supplies</string>
    <string name="section2_s1">Become Fit</string>
    <string name="section2_s1_text">Being fit is the first pillar to being truly prepared. Fitness consists of physical, financial, and mental/emotional health. Each of these are intricately woven into one another so that when you improve one, you improve the other. For example, physical exercise makes you feel good and can help your emotional health by boosting your confidence and self-esteem. In this way being fit in each category will help you to be healthy, happy, and truly prepared.
    \n\n\n
    Physical Health
    \n
    In an emergency you may need to walk or swim long distances. It is likely you will need to carry a heavy load, such as an injured person. You yourself may be injured or even sick in bed. To meet these challenges and prevent injury/illness you need to incorporate healthy habits into your daily life. There are a lot of different opinions about how to be healthy, but most agree with each other on certain key points. Adapt these basic principles to your individual needs, which may be different. We also recommend you do research for yourself and consult your doctor.
    \n\n
    • Sleep 7–8 hours every night.\n• Get 30 minutes of vigorous exercise 5–6 days a week. In addition to working on your strength, work to improve your endurance, flexibility, and balance.\n• Eat lots of fresh fruits and vegetables, as well as whole grains. Eat a variety of meat, including beef, chicken, fish, and other seafood.\n• Limit foods with artificial preservatives and dubious ingredients.\n• Eat and drink as little added sugars as possible (cane sugar, corn syrup, etc).
    \n\n
    Find a way to make exercise and nutrition fun! If a diet or workout plan isn’t fun then it won’t be sustainable and you’ll be less prepared for adapting in tough situations.
    \n\n\n
    Financial Health
    \n
    Although saving up for retirement may not be a good way to prepare for the apocalypse, living a prepared lifestyle is about preparing yourself for anything, including the “end of the world” happening after your lifetime. Here are some basics on how to be financially fit for survival. Even though they are incredibly simple they are absolutely necessary for financial health:
    \n\n
    • Get rid of debt and stay debt free\n• Have and keep a budget to avoid spending more than what you make\n• Work to have a healthy credit score\n• Make wise investments and prepare for retirement early on\n• Save enough money in a separate account to live off of for a few months if you lose your job\n• Have plenty of cash on hand, at least enough to be able to transport your family to safety in an emergency\n• Grow a garden\n• Learn to make and repair things on your own
    \n\n\n
    Mental/Emotional Health
    \n
    When it comes to surviving, your attitude and perspective are powerful. A healthy mind and attitude says, “I can do hard things.” In emergencies you may have to endure pain, discomfort, and less-than-ideal situations. Enduring those things optimistically is learned with experience and effort.
    \n\n
    To begin developing a healthy mind and attitude, take your daily struggles (like difficult projects at work or trying to be patient with your kids), and start focusing on the positive instead of the negative. When you have improved and built up some momentum, try new things to stretch your mental toughness. Train for a 5k run. Go back and finish college. Do what you’ve always wanted to do but never took the chance. Here are some other areas of emotional health that you can work on:
    \n\n
    • See challenges as opportunities\n• Stress management\n• Self-esteem\n• Learn how not to complain\n• Be courageous\n• Show gratitude and compassion to others\n• Care more about people than possessions
    \n\n\n
    Becoming fit physically, financially, and mentally is like filling your car up with gas; it gives you energy and you feel less worried. It is the first pillar because it is key to building a lifestyle that will equip you to adapt and survive in emergencies, but it is just one piece of the puzzle.</string>
    <string name="section2_s1_quote_text">When you encounter uncomfortable situations, you can either decide to be a victim or an over-comer. Always choose to be an over-comer.</string>
    <string name="section2_s1_quote_source">Lailah Gifty Akita</string>
    <string name="section2_s2">Learn Useful Skills</string>
    <string name="section2_s2_text">“The separation of talent and skill is one of the greatest misunderstood concepts for people who are trying to excel, who have dreams, who want to do things. Talent you have naturally. Skill is only developed by hours and hours and hours of beating on your craft.” - Will Smith
    \n\n
    You may have the mental toughness to survive one night in the woods, or the financial wellness to live a few months after losing your job, but if you don’t have the skills to light a fire, or to get a new job how long will you last?
    \n\n
    Having practical skills is where the rubber meets the road. Knowledge is power, and when you practice knowledge it becomes skill. The following list gives you ideas of some useful skills you could learn. Pick one at a time and make it fun! Use them as inspiration to come up with your own ideas. Include your family, look up classes that you can attend, and practice at home:
    \n\n
    • Swimming\n• Navigating\n• Knot tying\n• Sewing\n• Self defense\n• Wilderness survival\n• Growing and harvesting your own food\n• How to do well in a job interview\n• How to start a business\n• First Aid (See p.35 of this bookSection)
    \n\n
    Learning useful skills could save your life, but more importantly it will help you create a healthy, fulfilling lifestyle. </string>
    <string name="section2_s2_quote_text">The more you know, the less you need.</string>
    <string name="section2_s2_quote_source">David Wescott; Primitive Survival Skills Expert</string>
    <string name="section2_s3">Make and Practice Emergency Plans</string>
    <string name="section3">What to Prepare For</string>
    <string name="section4">References</string>
    <string name="quiz">Test Your Knowledge</string>
    <string name="dialog_tryAgain">Would you like to try again?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="tagLine">Prepare for the Worst\nHope for the Best</string>
</resources>