<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_border"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/dialog_message_incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="Incorrect answer"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_tryAgain"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/dialog_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:background="@color/colorPrimaryLight"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/dialog_yes"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/dialog_button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:background="@color/colorPrimaryLight"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/dialog_no"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>